tests/cases/vectors/errors/vector-method-static-negative-index.ari
fn main() -> i64 {
  let index = 1 - 2;
  let values: Vec[i64] = [3, 5, 7];
  return values.get(index);
}
